test_verify_final_output.txt
Calculating task graph as no cached configuration is available for tasks: :backend:test --tests sgc.ControllersServicesCoverageTest --tests sgc.integracao.CDU15IntegrationTest
> Task :backend:processTestResources UP-TO-DATE
> Task :backend:processResources UP-TO-DATE

> Task :backend:compileJava
/app/backend/src/main/java/sgc/subprocesso/service/workflow/SubprocessoWorkflowService.java:278: error: incompatible types: Long cannot be converted to String
            throw new ErroMapaNaoAssociado(codSubprocesso);
                                           ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

> Task :backend:compileJava FAILED

[Incubating] Problems report is available at: file:///app/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':backend:compileJava'.
> Compilation failed; see the compiler output below.
  /app/backend/src/main/java/sgc/subprocesso/service/workflow/SubprocessoWorkflowService.java:278: error: incompatible types: Long cannot be converted to String
              throw new ErroMapaNaoAssociado(codSubprocesso);
                                             ^
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 24s
3 actionable tasks: 1 executed, 2 up-to-date
Configuration cache entry stored.
